--- a/WebApplication1/packages.config
+++ b/WebApplication1/packages.config
@@ -1,6 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="8.0.0" targetFramework="net48" />
+  <package id="BenchmarkDotNet" version="0.13.12" targetFramework="net48" />
+  <package id="BenchmarkDotNet.Annotations" version="0.13.12" targetFramework="net48" />
+  <package id="cloudscribe.Pagination.Models" version="1.1.0" targetFramework="net48" />
+  <package id="CommandLineParser" version="2.9.1" targetFramework="net48" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
+  <package id="Gee.External.Capstone" version="2.3.0" targetFramework="net48" />
+  <package id="Iced" version="1.17.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.9" targetFramework="net48" />
@@ -8,14 +15,49 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net48" />
-  <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Http.Abstractions" version="2.1.1" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Http.Features" version="2.1.1" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Mvc.Abstractions" version="2.1.38" targetFramework="net48" />
+  <package id="Microsoft.AspNetCore.Routing.Abstractions" version="2.1.1" targetFramework="net48" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="3.3.3" targetFramework="net48" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.Common" version="4.1.0" targetFramework="net48" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="4.1.0" targetFramework="net48" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net48" />
+  <package id="Microsoft.Diagnostics.NETCore.Client" version="0.2.251802" targetFramework="net48" />
+  <package id="Microsoft.Diagnostics.Runtime" version="2.2.332302" targetFramework="net48" />
+  <package id="Microsoft.Diagnostics.Tracing.TraceEvent" version="3.0.2" targetFramework="net48" />
+  <package id="Microsoft.DotNet.PlatformAbstractions" version="3.1.6" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration" version="2.1.1" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="2.1.1" targetFramework="net48" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging" version="2.1.1" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Options" version="2.1.1" targetFramework="net48" />
+  <package id="Microsoft.Extensions.Primitives" version="8.0.0" targetFramework="net48" />
+  <package id="Microsoft.Net.Http.Headers" version="2.1.1" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net48" />
+  <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="Perfolizer" version="0.2.1" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Collections.Immutable" version="5.0.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="7.0.2" targetFramework="net48" />
+  <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net48" />
+  <package id="System.Management" version="5.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Reflection.Emit" version="4.7.0" targetFramework="net48" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.7.0" targetFramework="net48" />
+  <package id="System.Reflection.Metadata" version="5.0.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net48" />
+  <package id="System.Security.AccessControl" version="5.0.0" targetFramework="net48" />
+  <package id="System.Security.Principal.Windows" version="5.0.0" targetFramework="net48" />
+  <package id="System.Text.Encoding.CodePages" version="4.5.1" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="8.0.1" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
