--- a/WebApplication1/packages.config
+++ b/WebApplication1/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Autofac" version="8.0.0" targetFramework="net48" />
+  <package id="Autofac" version="6.4.0" targetFramework="net48" />
+  <package id="Autofac.Mvc5" version="6.1.0" targetFramework="net48" />
   <package id="BenchmarkDotNet" version="0.13.12" targetFramework="net48" />
   <package id="BenchmarkDotNet.Annotations" version="0.13.12" targetFramework="net48" />
   <package id="cloudscribe.Pagination.Models" version="1.1.0" targetFramework="net48" />
