--- a/WebApplication1/packages.config
+++ b/WebApplication1/packages.config
@@ -40,7 +40,10 @@
   <package id="Microsoft.Net.Http.Headers" version="2.1.1" targetFramework="net48" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net48" />
   <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net48" />
+  <package id="MvcPaging" version="2.1.13" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net48" />
+  <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net48" />
   <package id="Perfolizer" version="0.2.1" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="5.0.0" targetFramework="net48" />
